--- a/src/styles/components/_variables.sass
+++ b/src/styles/components/_variables.sass
@@ -3,4 +3,7 @@ $red: #E20000
 $black: #000000
 $dark-grey: #262626
 $light-grey: #464646
+$lighter-grey: #868686
 $white: #FFFFFF
+
+$header-height: 45px
