--- a/src/components/header.pug
+++ b/src/components/header.pug
@@ -1,12 +1,11 @@
 header#header
-    .container.d-flex
-        .col-6
-            img(src=require("../assets/images/logo.webp"), alt="Лого")
-        nav.navbar.navbar-expand-lg.navbar-light.bg-light
+    .container.d-flex.h-100.justify-content-between
+        .col-6.h-100.d-flex.align-items-center
+            img.header__logo(src=require("../assets/images/logo.webp"), alt="Лого")
+        nav.navbar.navbar-expand-lg.navbar-light
             button.navbar-toggler(type="button", data-toggle="collapse", data-target="#navbarNav", aria-controls="navbarNav", aria-expanded="false", aria-label="Toggle navigation")
                 span.navbar-toggler-icon
             .collapse.navbar-collapse#navbarNav
-                ul.navbar-nav
+                .navbar-nav
                     each link in navLinks
-                        li.nav-item.active
-                            a.nav-link(href=link.href)= link.name
+                            a.nav-link.nav-item(href=link.href, class= link.active ? "active" : "")= link.name
