--- a/src/styles/components/_fonts.sass
+++ b/src/styles/components/_fonts.sass
@@ -1,3 +1,5 @@
+@import variables
+
 @font-face
   font-family: 'Montserrat'
   src: url('../../assets/fonts/Montserrat-Regular.woff2') format('woff2')
