--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -1,2 +1,32 @@
-@import 'components/fonts', 'components/variables', 'components/header', 'components/footer'
+@import components/fonts, components/variables, components/header, components/footer
 
+html
+  font-family: 'Play', sans-serif
+  font-size: 10px
+
+h3
+  font-size: 4rem
+  text-align: center
+  text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25)
+
+ul
+  padding: 0
+
+section
+  padding-block: 50px 70px
+
+.link
+  width: fit-content
+  display: flex
+  justify-content: center
+  align-items: center
+  margin-inline: auto
+  padding: 10px 40px
+  background: $red
+  font-size: 1.4rem
+  color: $white
+  text-decoration: none
+  text-transform: uppercase
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25)
+  &:hover
+    color: $white
