--- a/src/components/variables.pug
+++ b/src/components/variables.pug
@@ -190,3 +190,68 @@
             imageSrc: "",
         }
     ]
+
+-
+    questions = [
+        {
+            question: "Где находится учебная площадка?",
+            answer: "Сеть автодромов распределена по всему городу — подберем ближайшую к вам площадку."
+        },
+        {
+            question: "Будет ли инструктор на меня кричать?",
+            answer: "Учиться в автошколе будет не страшно — наши инструкторы очень доброжелательны!"
+        },
+        {
+            question: "Что входит в стоимость?",
+            answer: "В нашей автошколе цена обучения включает: полный курс теории, учебники, полный курс практического обучения, бензин, внутренний экзамен, документы в ГИБДД, организованная сдача экзамена в ГИБДД."
+        },
+        {
+            question: "Какие документы требуются для записи в автошколу?",
+            answer: "Вам потребуется паспорт и две фотографии. Если отучиться на права желает несовершеннолетний, потребуется также паспорт одного из родителей и разрешение на обучение и сдачу экзамена в ГИБДД от обоих родителей (нотариально заверенное)."
+        },
+        {
+            question: "На каких машинах проходит обучение?",
+            answer: "Будущие водители категории В учатся в нашей школе только на иномарках. Все автомобили оборудованы дублирующими педалями. В автопарке — Hyundai, Suzuki, Citroen, Chevrolet, Skoda, Ford, Renault."
+        },
+        {
+            question: "Могу я обучаться на автомате?",
+            answer: "Да, конечно, учиться на права вы можете на МКПП и АКПП."
+        },
+        {
+            question: "Со скольки лет можно обучаться?",
+            answer: "По закону РФ обучаться в автошколе и открыть категорию А разрешено с 16 лет, на категорию В можно обучаться с 17 лет, но получить права категории B — с 18 лет."
+        },
+        {
+            question: "Можно ли оплачивать частями?",
+            answer: "Да, учебу на права можно оплатить в три этапа. Первый взнос — 10 000 рублей. Рассрочка без процентов, без участия банков."
+        }
+    ]
+
+//-Карусель автопарк
+-
+    cars = [
+        {
+            name: "Kia Soul",
+            imageSrc: "../assets/images/cars/car-1.webp"
+        },
+        {
+            name: "Renault Duster",
+            imageSrc: "../assets/images/cars/car-2.webp"
+        },
+        {
+            name: "Kia Rio",
+            imageSrc: "../assets/images/cars/car-3.webp"
+        },
+        {
+            name: "Scoda Rapid",
+            imageSrc: "../assets/images/cars/car-4.webp"
+        },
+        {
+            name: "Hyundai Solaris",
+            imageSrc: "../assets/images/cars/car-5.webp"
+        },
+        {
+            name: "Citroen C4",
+            imageSrc: "../assets/images/cars/car-6.webp"
+        },
+    ]
