--- a/src/styles/components/_footer.sass
+++ b/src/styles/components/_footer.sass
@@ -1,1 +1,27 @@
 @import variables
+
+#footer
+  padding-block: 30px
+
+.footer__title
+  font-size: 2rem
+  margin-bottom: 20px
+  color: $black
+
+.contacts__li
+  margin-bottom: 5px
+
+.contacts__li,
+.contacts__link
+  font-family: 'Montserrat', sans-serif
+  font-size: 14px
+  font-weight: 500
+  color: $black
+  text-decoration: none
+  &:hover
+    color: $black
+
+.social__icon
+  width: 30px
+  height: 30px
+  margin-top: 5px
