--- a/src/styles/components/main/_branches.sass
+++ b/src/styles/components/main/_branches.sass
@@ -1,7 +1,7 @@
 @import src/styles/components/variables
 
 #branches
-  background: url("../../../assets/images/branches-main/branches-bg.webp")
+  background: url("../../../assets/images/background/branches-bg.webp") fixed no-repeat
   background-size: cover
   padding-bottom: 115px
 
