--- a/src/styles/components/main/_events.sass
+++ b/src/styles/components/main/_events.sass
@@ -1,1 +1,9 @@
 @import src/styles/components/variables
+
+#events
+  background: url("../../../assets/images/background/events-bg.webp") no-repeat 95%
+  background-size: contain
+
+.event__description
+  margin-block: 20px 50px
+  font-size: 2rem
