--- a/src/styles/components/main/_instructors.sass
+++ b/src/styles/components/main/_instructors.sass
@@ -1,1 +1,36 @@
 @import src/styles/components/variables
+
+#instructors
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 55.21%), url("../../../assets/images/background/instructors-bg.webp")
+  background-size: cover
+
+.instructors__ul
+  margin-top: 50px
+  gap: 50px
+
+.instructors__li
+  background: rgba(255, 255, 255, 0.9)
+  width: 280px
+
+.instructor__image
+  width: 100%
+  height: auto
+
+.instructor__content
+  padding: 16px 20px 20px
+
+.instructor__name
+  font-family: 'Montserrat', sans-serif
+  font-size: 1.8rem
+  font-weight: 500
+  margin-bottom: 10px
+
+.instructor__age
+  font-family: 'Montserrat', sans-serif
+  font-size: 1.6rem
+  font-weight: 400
+  margin-bottom: 16px
+
+.instructor__description
+  font-size: 1.4rem
+  color: $light-grey
