--- a/src/styles/components/main/_motoStages.sass
+++ b/src/styles/components/main/_motoStages.sass
@@ -1,1 +1,17 @@
 @import src/styles/components/variables
+
+#moto-stages
+  padding-bottom: 75px
+  margin-bottom: -5px
+
+.moto-stages__ul
+  width: fit-content
+  margin: 50px auto 70px
+
+.moto-stages__image
+  width: 280px
+  height: auto
+  outline: 1px solid $black
+  padding: 10px
+  box-sizing: content-box
+  margin-left: 10px
