--- a/src/styles/components/main/bundle.sass
+++ b/src/styles/components/main/bundle.sass
@@ -11,3 +11,14 @@
 @import events
 @import faq
 @import enroll
+
+.stage__index,
+.stage__title,
+.stage__description
+  text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25)
+
+.photos-n-moto-stages,
+.autopark-n-reviews,
+#faq
+  background: url("../../../assets/images/background/rhombus-bg.webp") fixed no-repeat
+  background-size: cover
