--- a/src/components/mixins.pug
+++ b/src/components/mixins.pug
@@ -4,5 +4,49 @@ mixin enrollModal(classes)
     a.link(href="", class=classes) Оставить заявку
 
 //-Форма Оставить заявку
-mixin enrollForm()
-    form
+mixin enrollForm(classes)
+    div(class=classes)
+
+//-Аккордеон с вопросами
+mixin accordionItem(index, question, answer)
+    .accordion-item
+        h2.accordion-header
+            button.accordion-button.collapsed(type="button" data-bs-toggle="collapse" data-bs-target=`#faq-accordion-collapse-${index}` aria-expanded="true" aria-controls=`faq-accordion-collapse-${index}`)
+                span.accordion-question= question
+                svg.accordion-svg( width="18" height="8" viewBox="0 0 18 8" fill="none" xmlns="http://www.w3.org/2000/svg")
+                    path(d="M1 1L9 7L17 1" stroke="white")
+
+        .accordion-collapse.collapse(id=`faq-accordion-collapse-${index}` aria-labelledby=`faq-accordion-heading-${index}`)
+            .accordion-body= answer
+
+mixin carousel(cards, index, type, options)
+    .carousel.slide(id=`carouselIndicators-${index}` data-bs-ride="true")
+        if options.isIndicate
+            .carousel-indicators
+                each _, count in cards
+                    button(type="button" data-bs-target=`#carouselIndicators-${index}` data-bs-slide-to=count class=!count ? 'active' : '' aria-current="true" aria-label=`Slide ${count + 1}`)
+        .carousel-inner
+            each card, count in cards
+                .carousel-item(class= !count ? 'active' : '')
+                    case type
+                        when "photo"
+                            +carouselPhoto(card, options)
+                        when "review"
+                            +carouselReview(card, options)
+                        default
+                            div
+        if options.isControlled
+            button.carousel-control-prev(type="button" data-bs-target=`#carouselIndicators-${index}` data-bs-slide="prev")
+                span.carousel-control-prev-icon(aria-hidden="true")
+                span.visually-hidden <
+            button.carousel-control-next(type="button" data-bs-target=`#carouselIndicators-${index}` data-bs-slide="next")
+                span.carousel-control-next-icon(aria-hidden="true")
+                span.visually-hidden >
+
+mixin carouselPhoto(card, options)
+    img.carousel-photo(src=require(card.imageSrc) alt=card.name class= options ? options.classes: '')
+    if options.isDescripted
+        p.carousel-description.text-center= card.name
+
+mixin carouselReview(cards)
+    div
