--- a/src/styles/components/main/_enroll.sass
+++ b/src/styles/components/main/_enroll.sass
@@ -1,1 +1,9 @@
 @import src/styles/components/variables
+
+#enroll
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.4) 55.21%), url("../../../assets/images/background/faq-bg.webp") no-repeat
+  background-size: cover
+
+.enroll__description
+  margin-block: 20px 30px
+  font-size: 1.6rem
