--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -30,3 +30,23 @@ section
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25)
   &:hover
     color: $white
+
+.text_white
+  color: $white
+
+.text_red
+  color: $red
+
+.enroll-form
+  display: none
+  margin-inline: auto
+  padding: 10px
+  border: 1px solid #D9D9D9
+  box-sizing: content-box
+
+.carousel.slide
+  margin-top: 50px
+
+.carousel-description
+  font-size: 1.6rem
+  margin-top: 10px
